--- a/bootstrap_shopping_cheakout.html
+++ b/bootstrap_shopping_cheakout.html
@@ -21,14 +21,33 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light  bg-dark d-flex justify-content-between ">
         <i class="fas fa-gem  fa-2x mr-2 text-pink"></i>
         <a class="navbar-brand text-pink" href="#">FoeverDiamond</a>
 
+         <ul class="nav justify-content-center nav-tabs " id="nav-tab" role="tablist">
+            <li class="nav-item ">
+              <a class="nav-link activ"   id="#pane-1tab" data-toggle="tab" href="#pane-1" role="tab" aria-controls="#pane-1" aria-selected="true" >品牌珠寶</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link "  id="#pane-4tab" data-toggle="tab" href="#pane-4" role="tab" aria-controls="#pane-4" aria-selected="true" >流行飾品</a>
+            </li>
+            <li class="nav-item " id="nvaTab">
+              <a class="nav-link"  id="#pane-2tab" data-toggle="tab" href="#pane-2" role="tab" aria-controls="#pane-2" aria-selected="true" >彩色寶石</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link  " href="#pane-3" id="#pane-3tab" data-toggle="tab" href="#pane-3" role="tab" aria-controls="#pane-3" aria-selected="true">訂婚/結婚戒指</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">訂製珠寶</a>
+            </li>
+          </ul>
+        
+        
         <!-- header navbar 右上角購物車 含icon 數量badge-->
         <div class="dropdown ml-auto">
             <button type="button" class="btn btn-sm btn-cart " data-toggle="dropdown" data-flip="false">
-                <i class="fas fa-shopping-cart fa-2x"></i> <!-- btn-cart另外下背景透明class,右上角購物車icon只占空間無底色 -->
+                <i class="fas fa-shopping-cart fa-2x" style="color: #7beadf;"></i> <!-- btn-cart另外下背景透明class,右上角購物車icon只占空間無底色 -->
                 <!-- 設計稿cart icon和badge是有一點重疊的,但是在html裡兩個都有佔空間無法重疊,需要用position絕對定位-->
                 <!-- 記得要去最上一層btn-cart裡面下relative-->
                 <span class="badge badge-pill badge-danger">12</span>
