--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </table>
 
 
-                    <a href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_cheakout.html?"
+                    <a href="bootstrap_shopping_cheakout.html"
                         id="DownLoadAudio" target="_blank" style=" text-decoration:none;">
                         <button id="Submit6" class="btn btn-sm btn-primary-chart btn-block text-white" type="button"
                             onclick="openWin(@item.UserID,@item.AudioID)">
@@ -181,7 +181,7 @@
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
                                         <a class="btn btn-primary-chart btn-block text-white btn-hover"
-                                            href="https://corly74.github.io/bootstrap.shopping/product.html"
+                                            href="product.html"
                                             role="button" target="_blank">購買去</a>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <a class="btn btn-primary-chart btn-block text-white btn-hover"
-                                            href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_product2.html"
+                                            href=roduct.html"
                                             target="_blank" role="button">購買去</a>
                                     </div>
                                 </div>
@@ -220,10 +220,10 @@
                                             <a class="btn btn-primary-chart text-white disabled" href="#" role="button"
                                                 target="_blank"><small>玫瑰金</small></a>
                                             <a class="btn btn-primary-chart text-white btn-hover "
-                                                href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_product2.html#"
+                                                href="product.html"
                                                 role="button" target="_blank"><small>古銅金</small></a>
                                             <a class="btn btn-primary-chart text-white btn-hover "
-                                                href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_product2.html#"
+                                                href="product.html"
                                                 role="button" target="_blank"><small>24k金</small></a>
 
                                         </div>
