--- a/product.html
+++ b/product.html
@@ -50,7 +50,7 @@
         
         
         <!-- header navbar 右上角購物車 含icon 數量badge-->
-        <div class="dropdown ml-auto">
+        <div class="dropdown ">
             <button type="button" class="btn btn-sm btn-cart " data-toggle="dropdown" data-flip="false">
                 <i class="fas fa-shopping-cart fa-2x" style="color: #7beadf;"></i> <!-- btn-cart另外下背景透明class,右上角購物車icon只占空間無底色 -->
                 <!-- 設計稿cart icon和badge是有一點重疊的,但是在html裡兩個都有佔空間無法重疊,需要用position絕對定位-->
