--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
         
         <ul class="nav justify-content-center nav-tabs " id="nav-tab" role="tablist">
             <li class="nav-item ">
-              <a class="nav-link activ"   id="#pane-1tab" data-toggle="tab" href="#pane-1" role="tab" aria-controls="#pane-1" aria-selected="true" >品牌珠寶</a>
+              <a class="nav-link activ"   id="#pane-1tab" data-toggle="tab" href="index.html#pane-1" role="tab" aria-controls="#pane-1" aria-selected="true" >品牌珠寶</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link "  id="#pane-4tab" data-toggle="tab" href="#pane-4" role="tab" aria-controls="#pane-4" aria-selected="true" >流行飾品</a>
