--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
                                         <a class="btn btn-primary-chart btn-block text-white btn-hover"
-                                            href="https://corly74.github.io/bootstrap.shopping/product.html"
+                                            href="product.html"
                                             role="button" target="_blank">購買去</a>
                                     </div>
                                 </div>
@@ -202,7 +202,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <a class="btn btn-primary-chart btn-block text-white btn-hover"
-                                            href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_product2.html"
+                                            href="product.html"
                                             target="_blank" role="button">購買去</a>
                                     </div>
                                 </div>
@@ -224,10 +224,10 @@
                                             <a class="btn btn-primary-chart text-white disabled" href="#" role="button"
                                                 target="_blank"><small>玫瑰金</small></a>
                                             <a class="btn btn-primary-chart text-white btn-hover "
-                                                href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_product2.html#"
+                                                href="product.html"
                                                 role="button" target="_blank"><small>古銅金</small></a>
                                             <a class="btn btn-primary-chart text-white btn-hover "
-                                                href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_product2.html#"
+                                                href="product.html"
                                                 role="button" target="_blank"><small>24k金</small></a>
 
                                         </div>
@@ -252,7 +252,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <a class="btn btn-primary-chart btn-block text-white btn-hover"
-                                            href="file:///D:/bootstrap-project/bootstrap_shopping%20page/bootstrap_shopping_product2.html"
+                                            href="product.html"
                                             target="_blank" role="button">購買去</a>
                                     </div>
                                 </div>
@@ -284,7 +284,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#"
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html"
                                             role="button">購買去</a>
                                     </div>
                                 </div>
@@ -300,7 +300,7 @@
 
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#"
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html"
                                             role="button">購買去</a>
                                     </div>
                                 </div>
@@ -345,7 +345,7 @@
 
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#"
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html"
                                             role="button">購買去</a>
                                     </div>
                                 </div>
@@ -379,7 +379,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#"
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html"
                                             role="button">購買去</a>
                                     </div>
                                 </div>
@@ -447,7 +447,7 @@
 
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#"
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html"
                                             role="button">購買去</a>
                                     </div>
                                 </div>
@@ -487,7 +487,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#"
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html"
                                             role="button">購買去</a>
                                     </div>
                                 </div>
@@ -506,7 +506,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
@@ -524,7 +524,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
@@ -542,7 +542,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
@@ -560,7 +560,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
@@ -578,7 +578,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
@@ -596,7 +596,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
@@ -614,7 +614,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
@@ -632,7 +632,7 @@
                                     </div>
                                     <div class="card-footer border-top-0 bg-white">
                                         <!-- border-top-0把footer裡分隔線去除掉-->
-                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="#" role="button">購買去</a>
+                                        <a class="btn btn-primary-chart btn-block text-white btn-hover" href="product.html" role="button">購買去</a>
                                     </div>
                                 </div>
                             </div>
