--- a/bootstrap_shopping_cheakout.html
+++ b/bootstrap_shopping_cheakout.html
@@ -256,7 +256,7 @@
                                     </div>
                                 
 
-                                        <a href="https://corly74.github.io/bootstrap.shopping/bootstrap_shopping_payment.html" id="DownLoadAudio"
+                                        <a href="bootstrap_shopping_payment.html" id="DownLoadAudio"
                                             target="_blank" style=" text-decoration:none;>
                                             <button id="Submit6" class="btn btn-chart btn-block" type="button" 
                                                 onclick="openWin(@item.UserID,@item.AudioID)">
