--- a/bootstrap_shopping_success.html
+++ b/bootstrap_shopping_success.html
@@ -18,14 +18,14 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-dark ">
         <i class="fas fa-gem  fa-2x mr-2 text-pink"></i>
         <a class="navbar-brand text-pink" href="#">FoeverDiamond</a>
     
         <!-- header navbar 右上角購物車 含icon 數量badge-->
         <div class="dropdown ml-auto">
             <button type="button" class="btn btn-sm btn-cart " data-toggle="dropdown" data-flip="false">
-                <i class="fas fa-shopping-cart fa-2x"></i> <!-- btn-cart另外下背景透明class,右上角購物車icon只占空間無底色 -->
+                <i class="fas fa-shopping-cart fa-2x" style="color: #7beadf;"></i> <!-- btn-cart另外下背景透明class,右上角購物車icon只占空間無底色 -->
                 <!-- 設計稿cart icon和badge是有一點重疊的,但是在html裡兩個都有佔空間無法重疊,需要用position絕對定位-->
                 <!-- 記得要去最上一層btn-cart裡面下relative-->
                 <span class="badge badge-pill badge-danger">12</span>
