--- a/bootstrap_shopping_payment.html
+++ b/bootstrap_shopping_payment.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-light bg-dark d-flex justify-content-between">
          <div class=""> 
         <i class="fas fa-gem  fa-2x mr-2 text-pink"></i>
-        <a class="navbar-brand text-pink" href="#">FoeverDiamond</a>
+        <a class="navbar-brand text-pink" href="index.html">FoeverDiamond</a>
     </div>
         
       
