--- a/bootstrap_shopping_success.html
+++ b/bootstrap_shopping_success.html
@@ -20,7 +20,7 @@
     
     <nav class="navbar navbar-light bg-dark ">
         <i class="fas fa-gem  fa-2x mr-2 text-pink"></i>
-        <a class="navbar-brand text-pink" href="#">FoeverDiamond</a>
+        <a class="navbar-brand text-pink" href="index.html">FoeverDiamond</a>
     
         <!-- header navbar 右上角購物車 含icon 數量badge-->
         <div class="dropdown ml-auto">
