--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 
                 <div class="tab-content">
-                    <div class="tab-pane active" role="tabpanel" aria-labelledby="pane-1tab">
+                    <div class="tab-pane active" id="pane-1" role="tabpanel" aria-labelledby="pane-1tab">
 
                         <div class="row">
                             <div class="col-md-4 mb-4 newproduct">
