--- a/bootstrap_shopping_payment.html
+++ b/bootstrap_shopping_payment.html
@@ -200,7 +200,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
     integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
-  <script src="js/all.js"></script>
+  <script src="js/new.js"></script>
   
 
      
